--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 <script src="script.js"></script>
 <!-- Made by link -->
-<a id="madeByPage" href="https://taisur-rubayet.github.io" target="_blank">Made by Taisur Rubayet</a>
+<a id="madeByPage" href="https://taisur-rubayet.github.io/Profile-card/" target="_blank">Made by Taisur Rubayet</a>
 </body>
 </html>
+
